Content of a cell in table updated. (Toplam -> Total)

--- a/exam_cover_page_EN.tex
+++ b/exam_cover_page_EN.tex
@@ -90,7 +90,7 @@
 			$\bm{10}$--$\bm{12}$   & $\bm{2}$.a & $\bm{15}$    & ~   \\ \hline
 			$\bm{13}$              & $\bm{2}$.b & $\bm{20}$    & ~   \\ \hline
 			$\bm{14}$              & $\bm{2}$.b & $\bm{20}$    & ~   \\ \hline
-			Toplam                 & ~          & 100          & ~   \\ \hline
+			Total                  & ~          & 100          & ~   \\ \hline
 		\end{tabular}
 		\vspace{-0.45cm}
 		\begin{flushright}
