--- a/exam_cover_page_EN.tex
+++ b/exam_cover_page_EN.tex
@@ -70,31 +70,38 @@
 	% Academic year, term, exam date, duration and academic personell
 	% Exam "PÖÇ" information and grading table
 	\begin{table}[!ht]
-		\renewcommand{\arraystretch}{1.5}
+		\renewcommand{\arraystretch}{1.1}
 		\centering
-		\begin{tabular}{@{}|>{\bfseries}L{0.18\linewidth}>{\bfseries}C{0.00\linewidth}>{\bfseries}L{0.25\linewidth}|@{}}
-			\hline
-			Academic Year  & : & $\bm{2017}$--$\bm{2018}$                  \\ \hline
-			Term         & : & \textbf{Spring}                             \\ \hline
-			Date         & : & $\bm{28.05.2018}$                           \\ \hline
-			Duration          & : & $\bm{75}$ \textbf{min.}                \\ \hline
-			Lecturer & : & \textbf{John Doe} \\ \hline
+		\begin{tabular}{@{}>{\bfseries}L{0.18\linewidth}>{\bfseries}C{0.00\linewidth}>{\bfseries}L{0.25\linewidth}@{}}
+			\toprule
+			Academic Year  & : & $\bm{2021}$--$\bm{2022}$                  \\ 
+			\midrule
+			Term         & : & \textbf{Spring}                             \\ 
+			\midrule
+			Date         & : & May $\bm{24}$th, $\bm{2022}$                           \\ 
+			\midrule
+			Duration          & : & $\bm{70}$ \textbf{min.}                \\
+			\midrule
+			Lecturer & : & \textbf{John Doe} \\
+			\bottomrule
 		\end{tabular}
 		\hfill
 		\renewcommand{\arraystretch}{1.1}
-		\begin{tabular}{|>{\bfseries}C{0.1\linewidth}|>{\bfseries}C{0.1\linewidth}|>{\bfseries}C{0.1\linewidth}|>{\bfseries}C{0.06\linewidth}|}
-			\hline
-			Question    & PÖÇ      & Weight & Score \\ \hline
-			$\bm{1}$--$\bm{5}$     & $\bm{1}$.a & $\bm{25}$    & ~   \\ \hline
-			$\bm{6}$--$\bm{9}$     & $\bm{1}$.b & $\bm{20}$    & ~   \\ \hline
-			$\bm{10}$--$\bm{12}$   & $\bm{2}$.a & $\bm{15}$    & ~   \\ \hline
-			$\bm{13}$              & $\bm{2}$.b & $\bm{20}$    & ~   \\ \hline
-			$\bm{14}$              & $\bm{2}$.b & $\bm{20}$    & ~   \\ \hline
-			Total                  & ~          & 100          & ~   \\ \hline
+		\begin{tabular}{>{\bfseries}C{0.1\linewidth}>{\bfseries}C{0.1\linewidth}>{\bfseries}C{0.1\linewidth}>{\bfseries}C{0.06\linewidth}}
+			Question & PLO      & Weight & Score \\
+			\toprule
+			$\bm{1}$ & $\bm{1}$.a, $\bm{1}$.b & $\bm{35}$    & ~   \\
+			\midrule
+			$\bm{2}$ & $\bm{2}$.a, $\bm{2}$.b & $\bm{35}$    & ~   \\
+			\midrule
+			$\bm{3}$ & $\bm{1}$.a, $\bm{2}$.b & $\bm{30}$    & ~   \\
+			\midrule
+			Total    & ~              		  & $\bm{100}$   & ~   \\
+			\bottomrule
 		\end{tabular}
-		\vspace{-0.45cm}
+		\vspace{-0.3cm}
 		\begin{flushright}
-			\textbf{PÖÇ: Program Öğrenim Çıktısı}
+			\textbf{PLO: Program Learning Objective}
 		\end{flushright}
 	\end{table}
 	\vspace{-1cm}
@@ -125,157 +132,17 @@
 	\end{itemize}
 	
 	\begin{table}[hb!]
-		\centering
+	\centering
 		\begin{tabular}{@{}C{0.03\linewidth}L{0.95\linewidth}@{}}
 			\toprule
-			\multicolumn{2}{l}{Program Öğrenim Çıktıları} \\
+			\multicolumn{2}{l}{Program Learning Objectives} \\
 			\midrule
-			1.a. & Matematik, fen bilimleri ve ilgili mühendislik disiplinine özgü konularda yeterli bilgi birikimi \\
-			1.b. & Bu alanlardaki kuramsal ve uygulamalı bilgileri, karmaşık mühendislik problemlerinde kullanabilme becerisi. \\
+			1.a & Adequate knowledge of mathematics, science and subjects specific to Electrical and Electronics Engineering \\
+			1.b & Ability to use theoretical and practical knowledge for complex problems in the field of Electrical and Electronics Engineering \\
 			\midrule
-			2.a. & Karmaşık mühendislik problemlerini saptama, tanımlama, formüle etme ve çözme becerisi \\
-			2.b. & Bu amaçla uygun analiz ve modelleme yöntemlerini seçme ve uygulama becerisi. \\
+			2.a & Ability to identify, define, formulate and solve complex Electrical and Electronics Engineering problems \\
+			2.b & Ability to choose and implement appropriate analysis and modeling methods for this purpose \\
 			\bottomrule
 		\end{tabular}
 	\end{table}
-\end{document}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Istanbul Commerce University Exam Cover Page (MÜDEK)
-%% -------------------
-%% $Author: Tapir Lab.$,
-%% $Date: May 14th, 2022$,
-%% $Revision: 1.0$
-%% $Copyright: Tapir Lab.$
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\documentclass[a4paper, 11pt]{article}
-\setlength{\oddsidemargin}{0pt} 
-\setlength{\evensidemargin}{0pt}
-\usepackage[top = 0.98in, right = 0.98in, left = 0.98in, bottom = 0.98in]{geometry}
-
-\usepackage[english]{babel}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-
-\usepackage{bm} % To type bold math
-
-\usepackage{graphicx} % to include figures
-\graphicspath{{./figures/}}
-
-\usepackage{booktabs} % Required for tables
-\usepackage{array} % extends the options for column formats
-\usepackage{multicol} % to use multicolumns of tables
-
-
-% Column Types
-\newcommand{\PreserveBackslash}[1]{\let\temp=\\#1\let\\=\temp}
-\newcolumntype{L}[1]{>{\PreserveBackslash\raggedright}m{#1}}
-\newcolumntype{C}[1]{>{\PreserveBackslash\centering}m{#1}}
-
-\begin{document}
-\thispagestyle{empty}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% University Logo - Department Name
-\begin{minipage}[c]{\textwidth}
-	\begin{minipage}[c]{0.3\textwidth}
-		\centering
-		\includegraphics[width=\textwidth]{logo.png}
-	\end{minipage}%
-	\begin{minipage}[c]{0.7\textwidth}
-		\centering
-		{\LARGE \textbf{Istanbul Commerce University}}\\[1em]
-		{\Large \textbf{Computer Engineering Department}}
-	\end{minipage}
-\end{minipage}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Course code, name and type of exam
-\begin{center}
-	\Large
-	\textbf{BIL$\bm{452}$--Artificial Intelligence (Midterm)}
-\end{center}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Student ID and name
-\begin{table}[!ht]
-	\renewcommand{\arraystretch}{2}
-	\centering
-	\begin{tabular}{@{}|L{0.25\linewidth} C{0.05\linewidth} p{0.60\linewidth}|@{}}
-		\hline
-		\textbf{Student ID}& : & ~ \\ \hline
-		\textbf{Student Name}  & : & ~ \\ \hline
-	\end{tabular}
-\end{table}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Academic year, term, exam date, duration and academic personell
-% Exam "PÖÇ" information and grading table
-\begin{table}[!ht]
-	\renewcommand{\arraystretch}{1.5}
-	\centering
-	\begin{tabular}{@{}|>{\bfseries}L{0.18\linewidth}>{\bfseries}C{0.00\linewidth}>{\bfseries}L{0.25\linewidth}|@{}}
-		\hline
-		Academic Year  & : & $\bm{2017}$--$\bm{2018}$                  \\ \hline
-		Term         & : & \textbf{Spring}                             \\ \hline
-		Date         & : & $\bm{28.05.2018}$                           \\ \hline
-		Duration          & : & $\bm{75}$ \textbf{min.}                \\ \hline
-		Lecturer & : & \textbf{John Doe} \\ \hline
-	\end{tabular}
-	\hfill
-	\renewcommand{\arraystretch}{1.1}
-	\begin{tabular}{|>{\bfseries}C{0.1\linewidth}|>{\bfseries}C{0.1\linewidth}|>{\bfseries}C{0.1\linewidth}|>{\bfseries}C{0.06\linewidth}|}
-		\hline
-		Question    & PÖÇ      & Weight & Score \\ \hline
-		$\bm{1}$--$\bm{5}$     & $\bm{1}$.a & $\bm{25}$    & ~   \\ \hline
-		$\bm{6}$--$\bm{9}$     & $\bm{1}$.b & $\bm{20}$    & ~   \\ \hline
-		$\bm{10}$--$\bm{12}$   & $\bm{2}$.a & $\bm{15}$    & ~   \\ \hline
-		$\bm{13}$              & $\bm{2}$.b & $\bm{20}$    & ~   \\ \hline
-		$\bm{14}$              & $\bm{2}$.b & $\bm{20}$    & ~   \\ \hline
-		Toplam                 & ~          & 100          & ~   \\ \hline
-	\end{tabular}
-	\vspace{-0.45cm}
-	\begin{flushright}
-		\textbf{PÖÇ: Program Öğrenim Çıktısı}
-	\end{flushright}
-\end{table}
-\vspace{-1cm}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Instructions
-\begin{center}
-	\large
-	\textbf{INSTRUCTIONS}
-\end{center}
-\begin{itemize}
-	\setlength{\itemsep}{0pt}
-	\setlength{\parskip}{1pt}
-	\item Print your name, your ID No before starting the test.
-	\item \textbf{Answer all questions.}
-	\item Write your answers on the attached sheets only. Your handwriting sheet should be clear, unreadable, non-presentable parts of your manuscript would not be graded.
-	\item You are allowed to have only this examination booklet on the table, everything else should be cleared and stored under the desk
-	\item Be particularly aware that the use or the presence of the following items on the desk is FORBIDDEN and will be considered as cheating attempt
-	\begin{itemize}
-		\setlength{\itemsep}{0pt}
-		\setlength{\parskip}{1pt}
-		\item[o] Dictionary
-		\item[o] Calculator
-		\item[o] Mobile Phone
-		\item[o] Lecture Notes/Slides/Personal notes
-		\item[o] Books
-	\end{itemize}
-\end{itemize}
-
-\begin{table}[hb!]
-	\centering
-	\begin{tabular}{@{}C{0.03\linewidth}L{0.95\linewidth}@{}}
-		\toprule
-		\multicolumn{2}{l}{Program Öğrenim Çıktıları} \\
-		\midrule
-		1.a. & Matematik, fen bilimleri ve ilgili mühendislik disiplinine özgü konularda yeterli bilgi birikimi \\
-		1.b. & Bu alanlardaki kuramsal ve uygulamalı bilgileri, karmaşık mühendislik problemlerinde kullanabilme becerisi. \\
-		\midrule
-		2.a. & Karmaşık mühendislik problemlerini saptama, tanımlama, formüle etme ve çözme becerisi \\
-		2.b. & Bu amaçla uygun analiz ve modelleme yöntemlerini seçme ve uygulama becerisi. \\
-		\bottomrule
-	\end{tabular}
-\end{table}
 \end{document}
