English and Turkish versions both updated with latest tables and PLO

--- a/exam_cover_page_EN.tex
+++ b/exam_cover_page_EN.tex
@@ -3,7 +3,7 @@
 %% -------------------
 %% $Author: Tapir Lab.$,
 %% $Date: May 14th, 2022$,
-%% $Revision: 1.0$
+%% $Revision: 1.1$
 %% $Copyright: Tapir Lab.$
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -32,6 +32,7 @@
 \newcolumntype{C}[1]{>{\PreserveBackslash\centering}m{#1}}
 
 \begin{document}
+	\boldmath
 	\thispagestyle{empty}
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	% University Logo - Department Name
@@ -43,15 +44,15 @@
 		\begin{minipage}[c]{0.7\textwidth}
 			\centering
 			{\LARGE \textbf{Istanbul Commerce University}}\\[1em]
-			{\Large \textbf{Computer Engineering Department}}
+			{\Large \textbf{Electrical--Electronics Engineering Department}}
 		\end{minipage}
 	\end{minipage}
 	
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	%%%%%%%%%%%%%%%%%%%%%%%%%a%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	% Course code, name and type of exam
 	\begin{center}
 		\Large
-		\textbf{BIL$\bm{452}$--Artificial Intelligence (Midterm)}
+		\textbf{EEE$405$--Digital Communication Systems (Final)}
 	\end{center}
 	
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -59,10 +60,10 @@
 	\begin{table}[!ht]
 		\renewcommand{\arraystretch}{2}
 		\centering
-		\begin{tabular}{@{}|L{0.25\linewidth} C{0.05\linewidth} p{0.60\linewidth}|@{}}
+		\begin{tabular}{@{}|L{0.3\linewidth} C{0.05\linewidth} p{0.55\linewidth}|@{}}
 			\hline
 			\textbf{Student ID}& : & ~ \\ \hline
-			\textbf{Student Name}  & : & ~ \\ \hline
+			\textbf{Student Name--Surname}  & : & ~ \\ \hline
 		\end{tabular}
 	\end{table}
 	
@@ -74,13 +75,13 @@
 		\centering
 		\begin{tabular}{@{}>{\bfseries}L{0.18\linewidth}>{\bfseries}C{0.00\linewidth}>{\bfseries}L{0.25\linewidth}@{}}
 			\toprule
-			Academic Year  & : & $\bm{2021}$--$\bm{2022}$                  \\ 
+			Academic Year  & : & $2021$--$2022$                  \\ 
 			\midrule
 			Term         & : & \textbf{Spring}                             \\ 
 			\midrule
-			Date         & : & May $\bm{24}$th, $\bm{2022}$                           \\ 
+			Date         & : & May $24$th, $2022$                           \\ 
 			\midrule
-			Duration          & : & $\bm{70}$ \textbf{min.}                \\
+			Duration          & : & $70$ \textbf{min.}                \\
 			\midrule
 			Lecturer & : & \textbf{John Doe} \\
 			\bottomrule
@@ -90,13 +91,13 @@
 		\begin{tabular}{>{\bfseries}C{0.1\linewidth}>{\bfseries}C{0.1\linewidth}>{\bfseries}C{0.1\linewidth}>{\bfseries}C{0.06\linewidth}}
 			Question & PLO      & Weight & Score \\
 			\toprule
-			$\bm{1}$ & $\bm{1}$.a, $\bm{1}$.b & $\bm{35}$    & ~   \\
+			$1$ & $1$.a, $1$.b & $35$    & ~   \\
 			\midrule
-			$\bm{2}$ & $\bm{2}$.a, $\bm{2}$.b & $\bm{35}$    & ~   \\
+			$2$ & $2$.a, $2$.b & $35$    & ~   \\
 			\midrule
-			$\bm{3}$ & $\bm{1}$.a, $\bm{2}$.b & $\bm{30}$    & ~   \\
+			$3$ & $1$.a, $2$.b & $30$    & ~   \\
 			\midrule
-			Total    & ~              		  & $\bm{100}$   & ~   \\
+			Total    & ~              		  & $100$   & ~   \\
 			\bottomrule
 		\end{tabular}
 		\vspace{-0.3cm}
@@ -132,7 +133,7 @@
 	\end{itemize}
 	
 	\begin{table}[hb!]
-	\centering
+		\centering
 		\begin{tabular}{@{}C{0.03\linewidth}L{0.95\linewidth}@{}}
 			\toprule
 			\multicolumn{2}{l}{Program Learning Objectives} \\
@@ -145,4 +146,5 @@
 			\bottomrule
 		\end{tabular}
 	\end{table}
+	\unboldmath
 \end{document}
