Missing 'i' letter added to end of 'Üniveristes'

--- a/exam_cover_page_TR.tex
+++ b/exam_cover_page_TR.tex
@@ -43,7 +43,7 @@
 		\end{minipage}%
 		\begin{minipage}[c]{0.7\textwidth}
 			\centering
-			{\LARGE \textbf{İstanbul Ticaret Üniversites}}\\[1em]
+			{\LARGE \textbf{İstanbul Ticaret Üniversitesi}}\\[1em]
 			{\Large \textbf{Elektrik--Elektronik Mühendisliği Bölümü}}
 		\end{minipage}
 	\end{minipage}
